--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -81,7 +81,9 @@
                     android:drawablePadding="6dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="12dp"
+                    android:minWidth="0dp"
+                    android:minHeight="0dp"
+                    android:layout_marginTop="6dp"
                     android:layout_marginLeft="24dp"
                     android:padding="12dp"
                     android:text="프로필 자세히 보기"
@@ -149,13 +151,13 @@
 
                 <ImageView
                     android:id="@+id/iconDocs"
-                    android:layout_width="24sp"
-                    android:layout_height="24sp"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
                     android:layout_gravity="center"
                     android:layout_marginTop="18dp"
                     android:background="@drawable/docs_icon"
-                    app:layout_constraintTop_toBottomOf="@+id/iconHeart"
-                    app:layout_constraintLeft_toLeftOf="@+id/constraintThr"/>
+                    app:layout_constraintLeft_toLeftOf="@+id/constraintThr"
+                    app:layout_constraintTop_toBottomOf="@+id/iconHeart" />
 
                 <TextView
                     android:id="@+id/textMatchList"
