--- a/app/src/main/res/layout/mypage_profile.xml
+++ b/app/src/main/res/layout/mypage_profile.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/mypage_top_background"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -9,7 +10,27 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent">
+
     </androidx.appcompat.widget.Toolbar>
+
+    <Button
+        android:id="@+id/edit_btn"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:minHeight="0dp"
+        android:minWidth="0dp"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
+        android:paddingLeft="18dp"
+        android:paddingRight="18dp"
+        android:layout_margin="12dp"
+        android:background="@drawable/mypage_profile_btn"
+        android:text="프로필 수정"
+        android:textColor="@color/white"
+        android:textSize="12sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toTopOf="@id/toolbar"
+        app:layout_constraintRight_toRightOf="@id/toolbar"/>
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guidelineLeft"
@@ -25,199 +46,226 @@
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.95"/>
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineMiddle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.4"/>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintTop"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
+        app:layout_constraintRight_toRightOf="@id/guidelineRight"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar">
+
         <de.hdodenhof.circleimageview.CircleImageView
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/profile_image"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:src="@drawable/bedge_icon"
-            app:civ_border_width="2dp"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:layout_marginTop="48dp"
+            android:background="@drawable/profileshape"
             app:civ_border_color="#FFFFFF"
-            android:layout_gravity="center"
-            app:layout_constraintTop_toBottomOf="@+id/toolbar"
-            app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
-            app:layout_constraintRight_toRightOf="@id/guidelineRight"/>
+            app:civ_border_width="2dp"
+            app:layout_constraintLeft_toLeftOf="@+id/constraintTop"
+            app:layout_constraintRight_toRightOf="@+id/constraintTop"
+            app:layout_constraintTop_toTopOf="@+id/constraintTop" />
 
         <TextView
             android:id="@+id/textName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
             android:text="도구리"
-            android:textSize="23sp"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
+            android:textSize="24sp"
             android:textStyle="bold"
-            app:layout_constraintTop_toBottomOf="@+id/profile_image"
             app:layout_constraintLeft_toLeftOf="@+id/profile_image"
-            app:layout_constraintRight_toRightOf="@+id/profile_image"/>
+            app:layout_constraintRight_toRightOf="@id/profile_image"
+            app:layout_constraintTop_toBottomOf="@+id/profile_image" />
 
-    <Button
-        android:id="@+id/edit_btn"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="프로필 수정"
-        android:textColor="@color/black"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        android:gravity="center"
-        android:layout_marginTop="20sp"
-        app:layout_constraintTop_toBottomOf="@+id/textName"
-        app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
-        app:layout_constraintRight_toRightOf="@id/guidelineRight"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraint"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/edit_btn"
-        app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
-        app:layout_constraintRight_toRightOf="@id/guidelineRight">
-
-        <TextView
-            android:id="@+id/textManner"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="매너온도"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            android:textSize="18sp"
-            android:layout_marginTop="6sp"
-            app:layout_constraintTop_toTopOf="@+id/constraint"
-            app:layout_constraintLeft_toLeftOf="@+id/constraint"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="36.7℃"
-            android:textColor="@color/blue"
-            android:layout_gravity="right"
-            android:layout_marginRight="10sp"
-            android:textSize="18sp"
-            app:layout_constraintTop_toTopOf="@id/imgSmile"
-            app:layout_constraintRight_toLeftOf="@+id/imgSmile"
-            app:layout_constraintBottom_toBottomOf="@+id/imgSmile"/>
-
-        <ImageView
-            android:id="@+id/imgSmile"
-            android:layout_width="28sp"
-            android:layout_height="28sp"
-            android:background="@drawable/smile"
-            app:layout_constraintTop_toTopOf="@+id/textManner"
-            app:layout_constraintBottom_toBottomOf="@+id/textManner"
-            app:layout_constraintRight_toRightOf="@+id/constraint"/>
-
-        <ProgressBar
-            android:id="@+id/progressbar"
-            android:max="100"
-            android:progress="50"
-            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-            android:progressDrawable="@drawable/progressbar_progressbar1"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:background="@drawable/mypage_profile_bottom_background"
+            android:id="@+id/constraintBottom"
             android:layout_width="0dp"
-            android:layout_height="22sp"
-            app:layout_constraintTop_toBottomOf="@+id/textManner"
-            app:layout_constraintLeft_toLeftOf="@+id/constraint"
-            app:layout_constraintRight_toRightOf="@id/constraint"
-            />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@+id/guidelineMiddle"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraint2"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/constraint"
-        app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
-        app:layout_constraintRight_toRightOf="@id/constraint">
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/InnerguidelineLeft"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.1"/>
 
-        <TextView
-            android:id="@+id/textFir"
-            android:layout_marginTop="20sp"
-            android:layout_marginLeft="20sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="· 홍은동 10회 인증 (최근30일)"
-            android:textColor="@color/black"
-            android:textSize="12sp"
-            app:layout_constraintTop_toTopOf="@+id/constraint2"
-            app:layout_constraintLeft_toLeftOf="@id/constraint2"/>
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guidelineInnerRight"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.9"/>
 
-        <TextView
-            android:id="@+id/textSec"
-            android:layout_marginBottom="20sp"
-            android:layout_marginLeft="20sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="· 최근 3일 이내 활동 (2023년 3월 1일 가입)"
-            android:textColor="@color/black"
-            android:textSize="12sp"
-            app:layout_constraintTop_toBottomOf="@+id/textFir"
-            app:layout_constraintLeft_toLeftOf="@id/constraint2"/>
+            <TextView
+                android:id="@+id/textManner"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="48dp"
+                android:text="당신의 매너온도는"
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                android:textSize="20sp"
+                app:layout_constraintTop_toTopOf="@+id/constraintBottom"
+                app:layout_constraintLeft_toLeftOf="@+id/InnerguidelineLeft"/>
 
-        <TextView
-            android:id="@+id/textBedge"
-            android:layout_gravity="center"
-            android:layout_marginLeft="20sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="활동 뱃지"
-            android:textColor="@color/black"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            app:layout_constraintTop_toBottomOf="@+id/textSec"
-            app:layout_constraintLeft_toLeftOf="@id/constraint2"/>
+            <TextView
+                android:id="@+id/textDegree"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="36.7℃"
+                android:textColor="@color/purple"
+                android:textStyle="bold"
+                android:layout_marginRight="10sp"
+                android:textSize="28sp"
+                app:layout_constraintTop_toBottomOf="@+id/textManner"
+                app:layout_constraintLeft_toLeftOf="@+id/textManner"/>
 
-        <ImageView
-            android:layout_width="18sp"
-            android:layout_height="18sp"
-            android:background="@drawable/next"
-            android:layout_gravity="center"
-            app:layout_constraintTop_toTopOf="@+id/textBedge"
-            app:layout_constraintRight_toRightOf="@+id/constraint2"
-            app:layout_constraintBottom_toBottomOf="@+id/textBedge"/>
+            <ImageView
+                android:id="@+id/imgSmile"
+                android:layout_width="28sp"
+                android:layout_height="28sp"
+                android:background="@drawable/smile"
+                app:layout_constraintTop_toTopOf="@+id/textManner"
+                app:layout_constraintBottom_toBottomOf="@+id/textManner"
+                app:layout_constraintRight_toRightOf="@+id/guidelineInnerRight"/>
+
+            <ProgressBar
+                android:id="@+id/progressbar"
+                android:max="100"
+                android:progress="50"
+                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+                android:progressDrawable="@drawable/progressbar_progressbar1"
+                android:layout_width="0dp"
+                android:layout_height="22sp"
+                android:layout_marginTop="36dp"
+                app:layout_constraintTop_toBottomOf="@+id/textDegree"
+                app:layout_constraintLeft_toLeftOf="@+id/InnerguidelineLeft"
+                app:layout_constraintRight_toRightOf="@id/guidelineInnerRight" />
+
+            <View
+                android:background="@color/black"
+                android:id="@+id/line"
+                android:layout_width="0dp"
+                android:layout_height="5dp"
+                android:layout_marginTop="12dp"
+                app:layout_constraintTop_toBottomOf="@+id/textActive"
+                app:layout_constraintLeft_toLeftOf="@id/InnerguidelineLeft"
+                app:layout_constraintRight_toRightOf="@id/guidelineInnerRight"/>
+
+            <TextView
+                android:id="@+id/textActive"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="48dp"
+                android:text="활동 내역"
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                android:textSize="15sp"
+                app:layout_constraintTop_toBottomOf="@+id/progressbar"
+                app:layout_constraintLeft_toLeftOf="@+id/InnerguidelineLeft" />
+
+            <TextView
+                android:id="@+id/textFir"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="18dp"
+                android:text="· 홍은동 10회 인증 (최근30일)"
+                android:textColor="@color/dark_gray"
+                android:textSize="12sp"
+                app:layout_constraintTop_toBottomOf="@+id/line"
+                app:layout_constraintLeft_toLeftOf="@+id/InnerguidelineLeft" />
+
+            <TextView
+                android:id="@+id/textSec"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="· 최근 3일 이내 활동 (2023년 3월 1일 가입)"
+                android:textColor="@color/dark_gray"
+                android:textSize="12sp"
+                app:layout_constraintTop_toBottomOf="@+id/textFir"
+                app:layout_constraintLeft_toLeftOf="@+id/InnerguidelineLeft" />
+
+            <TextView
+                android:id="@+id/textBedge"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="36dp"
+                android:text="활동 뱃지"
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                app:layout_constraintTop_toBottomOf="@+id/textSec"
+                app:layout_constraintLeft_toLeftOf="@id/InnerguidelineLeft"/>
+
+            <ImageView
+                android:layout_width="18sp"
+                android:layout_height="18sp"
+                android:background="@drawable/next"
+                android:layout_gravity="center"
+                app:layout_constraintTop_toTopOf="@+id/textBedge"
+                app:layout_constraintRight_toRightOf="@+id/guidelineInnerRight"
+                app:layout_constraintBottom_toBottomOf="@+id/textBedge"/>
 
 
-        <TextView
-            android:id="@+id/textMatch"
-            android:layout_gravity="center"
-            android:layout_marginLeft="20sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="매칭 게시글"
-            android:textColor="@color/black"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            app:layout_constraintTop_toBottomOf="@id/textBedge"
-            app:layout_constraintLeft_toLeftOf="@id/constraint2"/>
+            <TextView
+                android:id="@+id/textMatch"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="18dp"
+                android:text="매칭 게시글"
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                app:layout_constraintTop_toBottomOf="@id/textBedge"
+                app:layout_constraintLeft_toLeftOf="@id/InnerguidelineLeft"/>
 
-        <ImageView
-            android:layout_width="18sp"
-            android:layout_height="18sp"
-            android:background="@drawable/next"
-            android:layout_gravity="center"
-            app:layout_constraintTop_toTopOf="@id/textMatch"
-            app:layout_constraintRight_toRightOf="@+id/constraint2"
-            app:layout_constraintBottom_toBottomOf="@+id/textMatch"/>
+            <ImageView
+                android:layout_width="18sp"
+                android:layout_height="18sp"
+                android:background="@drawable/next"
+                android:layout_gravity="center"
+                app:layout_constraintTop_toTopOf="@id/textMatch"
+                app:layout_constraintRight_toRightOf="@+id/guidelineInnerRight"
+                app:layout_constraintBottom_toBottomOf="@+id/textMatch"/>
 
-        <TextView
-            android:id="@+id/textMannerReview"
-            android:layout_gravity="center"
-            android:layout_marginLeft="20sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="받은 매너 평가"
-            android:textColor="@color/black"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            app:layout_constraintTop_toBottomOf="@+id/textMatch"
-            app:layout_constraintLeft_toLeftOf="@id/constraint2"/>
+            <TextView
+                android:id="@+id/textMannerReview"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="18dp"
+                android:text="받은 매너 평가"
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                app:layout_constraintTop_toBottomOf="@+id/textMatch"
+                app:layout_constraintLeft_toLeftOf="@id/InnerguidelineLeft"/>
 
-        <ImageView
-            android:layout_width="18sp"
-            android:layout_height="18sp"
-            android:background="@drawable/next"
-            android:layout_gravity="center"
-            app:layout_constraintTop_toTopOf="@+id/textMannerReview"
-            app:layout_constraintRight_toRightOf="@id/constraint2"
-            app:layout_constraintBottom_toBottomOf="@+id/textMannerReview"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
+            <ImageView
+                android:layout_width="18sp"
+                android:layout_height="18sp"
+                android:background="@drawable/next"
+                android:layout_gravity="center"
+                app:layout_constraintTop_toTopOf="@+id/textMannerReview"
+                app:layout_constraintRight_toRightOf="@id/guidelineInnerRight"
+                app:layout_constraintBottom_toBottomOf="@+id/textMannerReview"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
