--- a/app/src/main/res/layout/home_posting.xml
+++ b/app/src/main/res/layout/home_posting.xml
@@ -224,6 +224,7 @@
         android:layout_marginBottom="24dp"
         android:layout_marginLeft="18dp"
         android:layout_marginRight="18dp"
+        android:inputType="textMultiLine"
         android:background="@drawable/edt_bg_custom"
         app:layout_constraintTop_toBottomOf="@+id/textContent"
         app:layout_constraintLeft_toLeftOf="parent"
