--- a/app/src/main/res/layout/chatting_date_item.xml
+++ b/app/src/main/res/layout/chatting_date_item.xml
@@ -8,6 +8,7 @@
         android:id="@+id/date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="10dp"
         android:text="2023년 10월 30일"
         android:textSize="20sp"
         app:layout_constraintLeft_toLeftOf="parent"
