--- a/app/src/main/res/layout/mypage_profile_edit.xml
+++ b/app/src/main/res/layout/mypage_profile_edit.xml
@@ -11,13 +11,45 @@
         app:layout_constraintLeft_toLeftOf="parent">
     </androidx.appcompat.widget.Toolbar>
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineLeft"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.1"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineRight"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.9"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/bottomGuideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.95"/>
+
+    <TextView
+        android:id="@+id/textTitle"
+        android:text="프로필 수정"
+        android:textStyle="bold"
+        android:textColor="@color/black"
+        android:textSize="24sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"/>
+
     <ImageView
         android:id="@+id/imglogo"
         android:layout_width="100sp"
         android:layout_height="100sp"
         android:layout_marginLeft="10sp"
         android:layout_marginTop="80sp"
-        android:src="@drawable/profile"
+        android:background="@drawable/profile"
         app:layout_constraintHorizontal_bias="0.481"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -36,50 +68,38 @@
         app:layout_constraintTop_toBottomOf="@id/imglogo" />
 
     <TextView
+        android:id="@+id/textNickname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="56dp"
-        android:layout_marginBottom="12sp"
+        android:layout_marginTop="48dp"
         android:text="닉네임"
         android:textColor="@color/black"
         android:textStyle="bold"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@id/layout1"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/imglogo"
+        app:layout_constraintLeft_toLeftOf="@id/guidelineLeft" />
 
-    <LinearLayout
-        android:layout_width="300sp"
-        android:layout_height="45sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/picture"
-        android:layout_marginTop="110sp"
-        android:gravity="left"
-        android:background="@drawable/edittext_custom"
-        android:id="@+id/layout1"
-        >
 
         <EditText
             android:id="@+id/loginId"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
             android:hint="사용하실 닉네임을 입력해주세요."
-            android:layout_marginLeft="10sp"
-            android:background="@null"
-            android:layout_gravity="center"
-            />
-    </LinearLayout>
+            android:background="@drawable/edt_bg_custom"
+            app:layout_constraintTop_toBottomOf="@+id/textNickname"
+            app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
+            app:layout_constraintRight_toRightOf="@id/guidelineRight"/>
 
     <Button
-        android:layout_width="78sp"
-        android:layout_height="36sp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:text="설정 완료"
-        app:layout_constraintRight_toRightOf="@id/layout1"
-        app:layout_constraintTop_toBottomOf="@id/layout1"
-        android:layout_marginTop="20sp"
         android:background="@drawable/loginbutton_custom"
         android:textColor="@color/white"
-        />
+        app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
+        app:layout_constraintRight_toRightOf="@id/guidelineRight"
+        app:layout_constraintBottom_toBottomOf="@id/bottomGuideline"/>
 
 
 
