--- a/app/src/main/res/layout/mypage_profile_edit.xml
+++ b/app/src/main/res/layout/mypage_profile_edit.xml
@@ -85,6 +85,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
+            android:padding="12dp"
             android:hint="사용하실 닉네임을 입력해주세요."
             android:background="@drawable/edt_bg_custom"
             app:layout_constraintTop_toBottomOf="@+id/textNickname"
