--- a/app/src/main/res/layout/home_posting.xml
+++ b/app/src/main/res/layout/home_posting.xml
@@ -231,14 +231,15 @@
         android:gravity="top"
         android:padding="18sp"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginTop="12dp"
         android:layout_marginBottom="24dp"
         android:inputType="textMultiLine"
         android:background="@drawable/edt_bg_custom"
         app:layout_constraintTop_toBottomOf="@+id/textContent"
         app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
-        app:layout_constraintRight_toRightOf="@id/guidelineRight" />
+        app:layout_constraintRight_toRightOf="@id/guidelineRight"
+        app:layout_constraintBottom_toTopOf="@+id/btnPost"/>
 
     <Button
         android:id="@+id/btnPost"
