--- a/app/src/main/res/layout/login_signup3.xml
+++ b/app/src/main/res/layout/login_signup3.xml
@@ -10,11 +10,12 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent">
+
         <ImageView
             android:layout_width="27dp"
             android:layout_height="27dp"
             android:src="@drawable/icon_close"
-            />
+            android:id="@+id/close"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -76,7 +77,7 @@
         />
 
     <TextView
-        android:id="@+id/address_tv"
+        android:id="@+id/addressTv"
         android:layout_width="376sp"
         android:layout_height="45sp"
         android:layout_gravity="center"
@@ -95,7 +96,7 @@
         app:layout_constraintLeft_toRightOf="@id/townButton1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/address_tv"
+        app:layout_constraintTop_toBottomOf="@id/addressTv"
         android:text="확인"
         android:textColor="@color/white"
         android:layout_marginLeft="5dp"
@@ -104,7 +105,17 @@
         android:background="@drawable/loginbutton_custom"
         />
 
-
+    <Button
+        android:text="설정완료"
+        android:id="@+id/town"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:textColor="@color/white"
+        android:background="@drawable/loginbutton_custom"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
